--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         </li>
         <li class="catalog-menu-item features-slider">
           <ul class="features-slider-list">
-            <li class="features-slider-item  hummer-drill  slide">
+            <li class="features-slider-item  hummer-drill">
               <h3>Перфораторы</h3>
               <p>Настоящие мужские игрушки</p>
               <a href="catalog.html" class="link-button hummer-drill-button">Открыть каталог</a>
             </li>
-            <li class=" features-slider-item  screwd-river slide slide-current">
+            <li class=" features-slider-item  screwd-river slide-current">
               <h3>Дрели</h3>
               <p>Соседям на радость!</p>
               <a href="catalog.html" class="link-button screwd-river-button">Открыть каталог</a>
@@ -225,32 +225,30 @@
             </li>
           </ul>
         </div>
-        <div class="slider-wrapper background-wrapper-3">
-          <ul class="services-slider-list">
-            <li class="services-slide-item slide">
-              <h4>Доставка</h4>
-              <p>Мы с удовольствием доставим ваш товар прямо<br>
-                к вашему подъезду совершенно бесплатно!<br>
-                Ведь мы неплохо заработаем,<br>
-                поднимая его на ваш этаж!</p>
-            </li>
-            <li class="services-slide-item slide">
-              <h4>Гарантия</h4>
-              <p>Если купленный у нас товар поломается или заискрит,<br>
-                а также в случае пожара, спровоцированного его<br>
-                возгоранием,вы всегда можете быть уверены в нашей<br>
-                гарантии.Мы обменяем сгоревший товар на новый<br>
-                Дом уж восстановите как-нибудь сами
-              </p>
-            </li>
-            <li class="services-slide-item slide slide-current">
-              <h4>Кредит</h4>
-              <p>Залезть в долговую яму стало проще!<br>
-                Кредитные консультанты придут вам на помощь.</p>
-              <a href="#" class="link-button">Отправить заявку</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="services-slider-list">
+          <li class="services-slide-item services-delivery">
+            <h4>Доставка</h4>
+            <p>Мы с удовольствием доставим ваш товар прямо<br>
+              к вашему подъезду совершенно бесплатно!<br>
+              Ведь мы неплохо заработаем,<br>
+              поднимая его на ваш этаж!</p>
+          </li>
+          <li class="services-slide-item services-guarante">
+            <h4>Гарантия</h4>
+            <p>Если купленный у нас товар поломается или заискрит,<br>
+              а также в случае пожара, спровоцированного его<br>
+              возгоранием,вы всегда можете быть уверены в нашей<br>
+              гарантии.Мы обменяем сгоревший товар на новый<br>
+              Дом уж восстановите как-нибудь сами
+            </p>
+          </li>
+          <li class="services-slide-item  services-credit slide-current">
+            <h4>Кредит</h4>
+            <p>Залезть в долговую яму стало проще!<br>
+              Кредитные консультанты придут вам на помощь.</p>
+            <a href="#" class="link-button">Отправить заявку</a>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="company-contact container">
@@ -265,9 +263,9 @@
           Техномарт работает со многими транспортными компаниями:
         </p>
         <ul class="railway-carriers">
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
+          <li class="railway-item">Деловые линии</li>
+          <li class="railway-item">Автотрейдинг</li>
+          <li class="railway-item">ЖелДорЭкспедиция</li>
         </ul>
         <a href="#" class="link-button info-button">Подробнее о компании</a>
       </div>
