--- a/catalog.html
+++ b/catalog.html
@@ -229,7 +229,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element">New</p>
             </li>
             <li class="product-item">
               <div class="item-wrapper">
@@ -242,7 +242,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element">New</p>
             </li>
             <li class="product-item">
               <div class="item-wrapper">
@@ -255,7 +255,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element new-current">New</p>
             </li>
             <li class="product-item">
               <div class="item-wrapper">
@@ -268,7 +268,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element new-current">New</p>
             </li>
             <li class="product-item">
               <div class="item-wrapper">
@@ -281,7 +281,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element">New</p>
             </li>
             <li class="product-item">
               <div class="item-wrapper">
@@ -294,7 +294,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element new-current">New</p>
             </li>
             <li class="product-item">
               <div class="item-wrapper">
@@ -307,7 +307,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element new-current">New</p>
             </li>
             <li class="product-item">
               <div class="item-wrapper">
@@ -320,7 +320,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element">New</p>
             </li>
             <li class="product-item">
               <div class="item-wrapper">
@@ -333,7 +333,7 @@
                 <button type="button" class="button-buy">Купить</button>
                 <button type="button" class="button-marker">В закладки</button>
               </div>
-              <p class="new-item">New</p>
+              <p class="new-element new-current">New</p>
             </li>
           </ul>
         </section>
