--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </svg>
           </label>
           <ul class="header-list">
-            <li><a href="#" class="header-marker">Закладки</a></li>
-            <li><a href="#" class="header-basket">Корзина</a></li>
+            <li><a href="#" class="header-marker">Закладки: 0</a></li>
+            <li><a href="#" class="header-basket">Корзина: 0</a></li>
             <li><a href="#" class="header-order">Оформить заказ</a></li>
           </ul>
         </div>
@@ -89,11 +89,11 @@
               <p>Соседям на радость!</p>
               <a href="catalog.html" class="link-button screwd-river-button">Открыть каталог</a>
             </li>
-            <div class="feature-slide-controls">
-              <button class="slide-current" type="button" aria-label="Первый слайд"></button>
-              <button type="button" aria-label="Второй слайд"></button>
-            </div>
           </ul>
+          <div class="feature-slide-controls">
+            <button class="slide-current" type="button" aria-label="Первый слайд"></button>
+            <button type="button" aria-label="Второй слайд"></button>
+          </div>
           <button class="button-arrow-left" type="button" aria-label="Предыдущий слайд">
             <svg width="22" height="40" viewBox="0 0 22 40" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -209,8 +209,8 @@
       <div class="services-slider container">
         <div class="services-title">
           <h3>Сервисы</h3>
-          <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
-            Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!</p>
+          <p> Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         </div>
         <div class="services-slider-controls">
           <ul class="control-list">
@@ -226,11 +226,11 @@
           </ul>
         </div>
         <ul class="services-slider-list">
-          <li class="services-slide-item services-delivery">
+          <li class="services-slide-item services-delivery slide-current">
             <h4>Доставка</h4>
             <p>Мы с удовольствием доставим ваш товар прямо<br>
-              к вашему подъезду совершенно бесплатно!<br>
-              Ведь мы неплохо заработаем,<br>
+              к вашему подъезду совершенно бесплатно!</p>
+            <p>Ведь мы неплохо заработаем,<br>
               поднимая его на ваш этаж!</p>
           </li>
           <li class="services-slide-item services-guarante">
@@ -242,10 +242,10 @@
               Дом уж восстановите как-нибудь сами
             </p>
           </li>
-          <li class="services-slide-item  services-credit slide-current">
+          <li class="services-slide-item  services-credit">
             <h4>Кредит</h4>
-            <p>Залезть в долговую яму стало проще!<br>
-              Кредитные консультанты придут вам на помощь.</p>
+            <p>Залезть в долговую яму стало проще!</p>
+            <p>Кредитные консультанты придут вам на помощь.</p>
             <a href="#" class="link-button">Отправить заявку</a>
           </li>
         </ul>
@@ -258,10 +258,8 @@
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br> ремонта и строительства не оставит
           равнодушными любителей сэкономить на<br> гастарбайтерах.
         </p>
-        <p>
-          Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          Техномарт работает со многими транспортными компаниями:
-        </p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России!</p>
+        <p>Техномарт работает со многими транспортными компаниями:</p>
         <ul class="railway-carriers">
           <li class="railway-item">Деловые линии</li>
           <li class="railway-item">Автотрейдинг</li>
@@ -361,11 +359,11 @@
         <p>© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
         <ul class="social">
           <li><a href="#" class="social-button" aria-label="Мы Вконтакте"><img src="img/icon/icon-vk.svg" width="26"
-                height="15"></a></li>
+                height="15" alt=""></a></li>
           <li><a href="#" class="social-button" aria-label="Мы в Фейсбуке"><img src="img/icon/icon-fb.svg" width="12"
-                height="22"></a></li>
+                height="22" alt=""></a></li>
           <li><a href="#" class="social-button" aria-label="Мы в инстаграм"><img src="img/icon/icon-insta.svg"
-                width="21" height="21"></a></li>
+                width="21" height="21" alt=""></a></li>
         </ul>
         <div class="feedback-email">
           <p>Обратная связь:<br><span><a href="#">mail@htmlacademy.ru</a></span></p>
