--- a/catalog.html
+++ b/catalog.html
@@ -38,7 +38,7 @@
         <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
         <div class="main-header-contact">
           <p class="number-phone">+7 (812) 555-05-55</p>
-          <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 * </p>
+          <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="authorized-user">
           <div class="user-name">
@@ -63,13 +63,13 @@
       </div>
       <nav class="main-navigation">
         <ul class="site-navigation">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li class="navigation-item"><a href="index.html">Главная</a></li>
+          <li class="navigation-item"><a href="#">Компания</a></li>
+          <li class="navigation-item"><a href="catalog.html">Каталог</a></li>
+          <li class="navigation-item"><a href="#">Новости</a></li>
+          <li class="navigation-item"><a href="#">Спецпредложения</a></li>
+          <li class="navigation-item"><a href="#">Доставка</a></li>
+          <li class="navigation-item"><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -145,12 +145,13 @@
             <legend>Производители:</legend>
             <ul class="manufacturer-list-filter">
               <li class="manufacturer-item-filter">
-                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch" />
+                <input class="visually-hidden filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch"
+                  disabled />
                 <label for="filter-bosch">Bosch</label>
               </li>
               <li class="manufacturer-item-filter">
                 <input class="visually-hidden filter-input-checkbox" type="checkbox" name="interscol"
-                  id="filter-interscol" />
+                  id="filter-interscol" checked disabled />
                 <label for="filter-interscol">Интерскол</label>
               </li>
               <li class="manufacturer-item-filter">
@@ -173,7 +174,7 @@
             <ul class="power-supply-list">
               <li class="power-supply-item">
                 <input class="visually-hidden filter-input-radio" type="radio" name="power-supply" value="battery"
-                  id="filter-battery" />
+                  id="filter-battery" checked disabled />
                 <label for="filter-battery">Аккумуляторные</label>
               </li>
               <li class="power-supply-item">
@@ -359,14 +360,10 @@
         <h3>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h3>
         <p>
           Перфоратор — универсальный строительный инструмент. Предназначен для
-          сверления и долбления отверстий в кирпиче, бетоне и камне.
-        </p>
-        <p>
+          сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
           Существуют электромеханические и пневматические перфораторы.
           Современные модели могут выполнять функции дрели, шуруповерта и
-          отбойного молотка.
-        </p>
-        <p>
+          отбойного молотка.<br>
           В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве
           будут совмещены отбойный молоток и ударная дрель.
         </p>
