Базовые условия, правки 3
1-Выровнил все элементы в карточке товара.
2-Добавил класс price-hidden элементу со старой ценой, где этот элемент скрыт
3-Убрал абсолютное позиционирование элементам слайдера.

--- a/catalog.html
+++ b/catalog.html
@@ -289,7 +289,7 @@
                 <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 2000</h4>
-              <p class="old-price"></p>
+              <p class="old-price price-hidden">15500</p>
               <p class="new-price">12500 Р.</p>
               <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
@@ -328,7 +328,7 @@
                 <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 2000</h4>
-              <p class="old-price"></p>
+              <p class="old-price price-hidden">15500</p>
               <p class="new-price">12500 Р.</p>
               <div class="item-button">
                 <button type="button" class="button-buy">Купить</button>
