--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
         </li>
         <li class="catalog-menu-item features-slider">
           <ul class="features-slider-list">
-            <li class="features-slider-item  hummer-drill slide-current">
+            <li class="features-slider-item  hummer-drill">
               <h3>Перфораторы</h3>
               <p>Настоящие мужские игрушки</p>
               <a href="catalog.html" class="link-button hummer-drill-button">Открыть каталог</a>
             </li>
-            <li class=" features-slider-item  screwd-river">
+            <li class=" features-slider-item  screwd-river slide-current">
               <h3>Дрели</h3>
               <p>Соседям на радость!</p>
-              <a href="catalog.html" class="link-button screwd-river-button">Открыть каталог</a>
+              <a href="catalog.html" class="link-button screwd-river-button ">Открыть каталог</a>
             </li>
           </ul>
           <div class="feature-slide-controls">
@@ -174,7 +174,7 @@
               <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000">
             </div>
             <h4>Перфоратор BOSCH<br> BFG 2000</h4>
-            <p class="old-price"></p>
+            <p class="old-price price-hidden">15500</p>
             <p class="new-price">12500 Р.</p>
             <div class="item-button">
               <button type="button" class="button-buy">Купить</button>
