Базовые условия, правки 4

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       </div>
     </div>
   </footer>
-  <script src="feedback_form.js"></script>
+  <script src="modal_form.js"></script>
 </body>
 
 </html>
