Базовые условия, правки 5
1-Подогнал под ПП главную страницу

--- a/catalog.html
+++ b/catalog.html
@@ -35,7 +35,7 @@
     </div>
     <div class="container">
       <div class="main-header">
-        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
+        <h1 class="site-title">Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
         <div class="main-header-contact">
           <p class="number-phone">+7 (812) 555-05-55</p>
           <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
