--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="container">
       <div class="main-header">
-        <h1>Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
+        <h1 class="site-title">Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
         <div class="main-header-contact">
           <p class="number-phone">+7 (812) 555-05-55</p>
           <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
@@ -80,12 +80,12 @@
         </li>
         <li class="catalog-menu-item features-slider">
           <ul class="features-slider-list">
-            <li class="features-slider-item  hummer-drill">
+            <li class="features-slider-item  hummer-drill slide-current">
               <h3>Перфораторы</h3>
               <p>Настоящие мужские игрушки</p>
               <a href="catalog.html" class="link-button hummer-drill-button">Открыть каталог</a>
             </li>
-            <li class=" features-slider-item  screwd-river slide-current">
+            <li class=" features-slider-item  screwd-river">
               <h3>Дрели</h3>
               <p>Соседям на радость!</p>
               <a href="catalog.html" class="link-button screwd-river-button ">Открыть каталог</a>
