--- a/catalog.html
+++ b/catalog.html
@@ -2,12 +2,13 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cuprum:wght@400;700&family=PT+Sans:wght@400;700&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans:wght@400;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -440,7 +441,7 @@
           <p>Обратная связь:<br><span><a href="#">mail@htmlacademy.ru</a></span></p>
         </div>
         <div class="footer-developer">
-          <p>Разработано -<br><span><a href="https://htmlacademy.ru">htmlacademy.ru</a></span></p>
+          <p>Разработано —<br><span><a href="https://htmlacademy.ru">htmlacademy.ru</a></span></p>
         </div>
       </div>
     </div>
