--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
           <p>Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
         </div>
         <div class="footer-developer">
-          <p>Разработано -<br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+          <p>Разработано —<br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
         </div>
       </div>
     </div>
