--- a/catalog.html
+++ b/catalog.html
@@ -221,7 +221,7 @@
           <!-- Скрытый заголовок-->
           <ul class="product-list">
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
@@ -234,7 +234,7 @@
               <p class="new-element">New</p>
             </li>
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
@@ -247,7 +247,7 @@
               <p class="new-element">New</p>
             </li>
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
@@ -260,7 +260,7 @@
               <p class="new-element new-current">New</p>
             </li>
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 3000</h4>
@@ -273,7 +273,7 @@
               <p class="new-element new-current">New</p>
             </li>
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
@@ -286,7 +286,7 @@
               <p class="new-element">New</p>
             </li>
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 2000</h4>
@@ -299,7 +299,7 @@
               <p class="new-element new-current">New</p>
             </li>
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 3000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 3000</h4>
@@ -312,7 +312,7 @@
               <p class="new-element new-current">New</p>
             </li>
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg6000.jpg" width="144" height="128" alt="Перфоратор Bosch BFG 6000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 6000</h4>
@@ -325,7 +325,7 @@
               <p class="new-element">New</p>
             </li>
             <li class="product-item">
-              <div class="item-wrapper">
+              <div class="item-wrapper-catalog">
                 <img src="img/hummer-drill-bfg2000-3000.jpg" width="127" height="112" alt="Перфоратор Bosch BFG 2000" />
               </div>
               <h4>Перфоратор BOSCH<br />BFG 2000</h4>
