--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             </p>
             <p class="feedback-item">
               <label for="text-letter">Текст письма:</label>
-              <textarea name="text-letter" id="text-letter" cols="1" rows="6"
+              <textarea class="feedback-form-textarea" name="text-letter" id="text-letter" cols="1" rows="6"
                 placeholder="В свободной форме"></textarea>
             </p>
           </div>
