--- a/catalog.html
+++ b/catalog.html
@@ -18,14 +18,16 @@
         <div class="box-header">
           <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" width="108" height="18"
               alt="На главную"></a>
-          <label class="header-search">
-            <input type="search" name="search" placeholder="Поиск:">
-            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path class="search-icon" fill-rule="evenodd" clip-rule="evenodd"
-                d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z"
-                fill="white" />
-            </svg>
-          </label>
+          <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+            <label class="header-search">
+              <input type="search" name="search" placeholder="Поиск:">
+              <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="search-icon" fill-rule="evenodd" clip-rule="evenodd"
+                  d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z"
+                  fill="white" />
+              </svg>
+            </label>
+          </form>
           <ul class="header-list">
             <li><a href="#" class="header-marker">Закладки: 0</a></li>
             <li><a href="#" class="header-basket">Корзина: 0</a></li>
@@ -386,7 +388,7 @@
         <a href="" class="link-button">Оформить заказ</a>
         <a href="" class="button-basket">Продолжить покупки</a>
       </div>
-      <button type="button" aria-label="Закрыть корзину" class="button-close">
+      <button class="button-close button-basket-close" type="button" aria-label="Закрыть корзину">
         <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
             d="M13.273 10.5L20.695 3.07799C21.084 2.68899 21.084 2.05299 20.695 1.66399L19.336 0.304995C18.947 -0.0840054 18.311 -0.0840054 17.922 0.304995L10.5 7.72699L3.07799 0.304995C2.68899 -0.0840054 2.05299 -0.0840054 1.66399 0.304995L0.304995 1.66399C-0.0840054 2.05299 -0.0840054 2.68899 0.304995 3.07799L7.72699 10.5L0.305995 17.922C-0.0830054 18.311 -0.0830054 18.947 0.305995 19.336L1.66499 20.695C2.05399 21.084 2.68999 21.084 3.07899 20.695L10.501 13.273L17.923 20.695C18.312 21.084 18.948 21.084 19.337 20.695L20.696 19.336C21.085 18.947 21.085 18.311 20.696 17.922L13.273 10.5Z"
@@ -438,14 +440,15 @@
                 width="21" height="21" alt=""></a></li>
         </ul>
         <div class="feedback-email">
-          <p>Обратная связь:<br><span><a href="#">mail@htmlacademy.ru</a></span></p>
+          <p>Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
         </div>
         <div class="footer-developer">
-          <p>Разработано —<br><span><a href="https://htmlacademy.ru">htmlacademy.ru</a></span></p>
+          <p>Разработано —<br><a href="https://htmlacademy.ru">htmlacademy.ru</a></p>
         </div>
       </div>
     </div>
   </footer>
+  <script src="js/modal_form.js"></script>
 </body>
 
 </html>
