--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         <div class="box-header">
           <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" width="108" height="18"
               alt="На главную"></a>
-          <label class="header-search">
-            <input type="search" name="search" placeholder="Поиск:">
-            <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path class="search-icon" fill-rule="evenodd" clip-rule="evenodd"
-                d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z"
-                fill="white" />
-            </svg>
-          </label>
+          <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+            <label class="header-search">
+              <input type="search" name="search" placeholder="Поиск:">
+              <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path class="search-icon" fill-rule="evenodd" clip-rule="evenodd"
+                  d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z"
+                  fill="white" />
+              </svg>
+            </label>
+          </form>
           <ul class="header-list">
             <li><a href="#" class="header-marker">Закладки: 0</a></li>
             <li><a href="#" class="header-basket">Корзина: 0</a></li>
@@ -273,7 +275,9 @@
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:
         </p>
-        <img src="img/card-location.svg" width="300" height="158" alt="Как к нам проехать">
+        <div class="card-wrapper">
+          <img src="img/card-location.svg" width="300" height="158" alt="Как к нам проехать">
+        </div>
         <a href="#" class="link-button map-button">Заблудились? Напишите нам!</a>
       </div>
       <section class="modal-form">
@@ -314,7 +318,33 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
           width="943" height="449" allowfullscreen
           title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
-        <button type="button" class="button-close" aria-label="Закрыть">
+        <div><img src="img/map.jpg" width="943" height="449"
+            alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></div>
+        <button type="button" class="button-close close-map" aria-label="Закрыть">
+          <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M13.273 10.5L20.695 3.07799C21.084 2.68899 21.084 2.05299 20.695 1.66399L19.336 0.304995C18.947 -0.0840054 18.311 -0.0840054 17.922 0.304995L10.5 7.72699L3.07799 0.304995C2.68899 -0.0840054 2.05299 -0.0840054 1.66399 0.304995L0.304995 1.66399C-0.0840054 2.05299 -0.0840054 2.68899 0.304995 3.07799L7.72699 10.5L0.305995 17.922C-0.0830054 18.311 -0.0830054 18.947 0.305995 19.336L1.66499 20.695C2.05399 21.084 2.68999 21.084 3.07899 20.695L10.501 13.273L17.923 20.695C18.312 21.084 18.948 21.084 19.337 20.695L20.696 19.336C21.085 18.947 21.085 18.311 20.696 17.922L13.273 10.5Z"
+              fill="#EE3643" />
+          </svg>
+        </button>
+      </section>
+      <section class="catalog-basket">
+        <h2 class="visually-hidden">Корзина</h2>
+        <!-- Скрытый заголовок-->
+        <svg width="66" height="66" viewBox="0 0 66 66" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M33 66C51.2254 66 66 51.2254 66 33C66 14.7746 51.2254 0 33 0C14.7746 0 0 14.7746 0 33C0 51.2254 14.7746 66 33 66Z"
+            fill="#63A63E" />
+          <path
+            d="M49.641 21.066C49.2498 20.6773 48.6181 20.6773 48.227 21.066L29.788 39.504C29.3968 39.8928 28.7651 39.8928 28.374 39.504L20.234 31.365C19.8428 30.9763 19.2111 30.9763 18.82 31.365L15.285 34.9C14.8962 35.2912 14.8962 35.9228 15.285 36.314L28.374 49.404C28.7651 49.7928 29.3968 49.7928 29.788 49.404L33.324 45.868L34.738 44.454L53.176 26.016C53.5647 25.6248 53.5647 24.9932 53.176 24.602L49.641 21.066Z"
+            fill="white" />
+        </svg>
+        <p>Товар добавлен в корзину</p>
+        <div class="basket-wrapper">
+          <a href="" class="link-button">Оформить заказ</a>
+          <a href="" class="button-basket">Продолжить покупки</a>
+        </div>
+        <button class="button-close button-basket-close" type="button" aria-label="Закрыть корзину">
           <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M13.273 10.5L20.695 3.07799C21.084 2.68899 21.084 2.05299 20.695 1.66399L19.336 0.304995C18.947 -0.0840054 18.311 -0.0840054 17.922 0.304995L10.5 7.72699L3.07799 0.304995C2.68899 -0.0840054 2.05299 -0.0840054 1.66399 0.304995L0.304995 1.66399C-0.0840054 2.05299 -0.0840054 2.68899 0.304995 3.07799L7.72699 10.5L0.305995 17.922C-0.0830054 18.311 -0.0830054 18.947 0.305995 19.336L1.66499 20.695C2.05399 21.084 2.68999 21.084 3.07899 20.695L10.501 13.273L17.923 20.695C18.312 21.084 18.948 21.084 19.337 20.695L20.696 19.336C21.085 18.947 21.085 18.311 20.696 17.922L13.273 10.5Z"
@@ -375,7 +405,7 @@
       </div>
     </div>
   </footer>
-  <script src="modal_form.js"></script>
+  <script src="js/modal_form.js"></script>
 </body>
 
 </html>
