--- a/catalog.html
+++ b/catalog.html
@@ -449,7 +449,7 @@
       </div>
     </div>
   </footer>
-  <script src="js/modal_form.js"></script>
+  <script src="js/modal-form-min.js"></script>
 </body>
 
 </html>
