Правки 1.0 после первой проверки

--- a/catalog.html
+++ b/catalog.html
@@ -16,8 +16,8 @@
     <div class="box-header-wrapper">
       <div class="container">
         <div class="box-header">
-          <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" width="108" height="18"
-              alt="На главную"></a>
+          <a href="index.html" class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" width="108"
+              height="18" alt="На главную"></a>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
             <label class="header-search">
               <input type="search" name="search" placeholder="Поиск:">
@@ -444,7 +444,7 @@
           <p>Обратная связь:<br><a href="#">mail@htmlacademy.ru</a></p>
         </div>
         <div class="footer-developer">
-          <p>Разработано —<br><a href="https://htmlacademy.ru">htmlacademy.ru</a></p>
+          <p>Разработано —<br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
         </div>
       </div>
     </div>
