--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <div class="box-header-wrapper">
+    <div class="box-header-wrapper ">
       <div class="container">
         <div class="box-header">
           <a class="header-logo"><img src="img/icon/icon-technomart-logo-header.svg" width="108" height="18"
@@ -36,29 +36,31 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="main-header">
-        <h1 class="site-title">Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
-        <div class="main-header-contact">
-          <a class="number-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
-          <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+    <div class="main-header-wrapper">
+      <div class="container">
+        <div class="main-header">
+          <h1 class="site-title">Интернет-магазин<br> строительных материалов<br> и инструментов для ремонта</h1>
+          <div class="main-header-contact">
+            <a class="number-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </div>
+          <div class="user-navigation">
+            <a href="#" class="login">Войти</a>
+            <a href="#">Регистрация</a>
+          </div>
         </div>
-        <div class="user-navigation">
-          <a href="#" class="login">Войти</a>
-          <a href="#">Регистрация</a>
-        </div>
+        <nav class="main-navigation">
+          <ul class="site-navigation">
+            <li class="navigation-item"><a href="index.html">Главная</a></li>
+            <li class="navigation-item"><a href="#">Компания</a></li>
+            <li class="navigation-item"><a href="catalog.html">Каталог</a></li>
+            <li class="navigation-item"><a href="#">Новости</a></li>
+            <li class="navigation-item"><a href="#">Спецпредложения</a></li>
+            <li class="navigation-item"><a href="#">Доставка</a></li>
+            <li class="navigation-item"><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li class="navigation-item"><a href="index.html">Главная</a></li>
-          <li class="navigation-item"><a href="#">Компания</a></li>
-          <li class="navigation-item"><a href="catalog.html">Каталог</a></li>
-          <li class="navigation-item"><a href="#">Новости</a></li>
-          <li class="navigation-item"><a href="#">Спецпредложения</a></li>
-          <li class="navigation-item"><a href="#">Доставка</a></li>
-          <li class="navigation-item"><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
     </div>
   </header>
   <main>
